--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,7 @@ Home
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-custom">
-                The new collections are here
+                The new<br>collections are<br>here
             </h1>
             <div class="my-5">
                 <h4>
