--- a/templates/base.html
+++ b/templates/base.html
@@ -106,8 +106,8 @@
             </nav>
         </div>
         <div id="delivery-banner" class="row text-center">
-            <div class="col bg-peach">
-                <h4 class="offer-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>                
+            <div class="col bg-peach text-black">
+                <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>                
             </div>            
         </div>
     </header>
