--- a/static/css/base.css
+++ b/static/css/base.css
@@ -132,9 +132,21 @@ body {
     border-color: #3C3C3C !important;
 }
 
-.navbar-toggler-icon {
-
+.overlay {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: #3C3C3C;
+    z-index: -1;
 }
+
+hr {
+    border-color: #FAB49A;
+}
+
+
 
 /* -------------------------------- Media Queries */
 
