--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -33,6 +33,7 @@
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
             {% endif %}
             <a href="" class="dropdown-item">My Profile</a>
+            <a href="" class="dropdown-item">Wishlist</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
         {% else %}
             <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
@@ -46,9 +47,9 @@
             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
             <p class="my-0">
                 {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
+                    £{{ grand_total|floatformat:2 }}
                 {% else %}
-                    $0.00
+                    £0.00
                 {% endif %}
             </p>
         </div>
