product details template created

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@ Home
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-button btn-black btn btn-lg rounded-pill text-uppsercase py-3"><strong>SHOP NOW</strong></a>
+                    <a href="{% url 'products' %}" class="shop-now-button btn-black btn btn-lg rounded-pill text-uppsercase py-3"><strong>SHOP NOW</strong></a>
                 </h4>
             </div>
         </div>
