--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -43,7 +43,7 @@ All Products
                                 <div class="card-footer bg-custom pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold text-peach">£{{ product.price }}</p>
+                                            <p class="lead mb-0 text-left font-weight-bold text-peach">${{ product.price }}</p>
                                             {% if product.rating %}
                                                 <small class="text-muted"><i class="fas fa-star mr-1 text-peach"></i>{{ product.rating }} / 5</small>
                                             {% else %}
