--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,8 +17,8 @@
                 Canine
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="canine-items-link">
-                <a href="{% url 'products' %}?category=dog_treats" class="dropdown-item">Treats</a>
-                <a href="{% url 'products' %}?category=dog_toys" class="dropdown-item">Toys</a>
+                <a href="{% url 'products' %}?category=dog_treats" class="dropdown-item">Dog Treats</a>
+                <a href="{% url 'products' %}?category=dog_toys" class="dropdown-item">Dog Toys</a>
                 <a href="{% url 'products' %}?category=dog_toys,dog_treats" class="dropdown-item">All Canine</a>
             </div>
         </li>
@@ -28,8 +28,8 @@
                 Coffee
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="coffee-link">
-                <a href="{% url 'products' %}?category=coffee_beans,coffee_pre_ground" class="dropdown-item">Beans &amp; Pre-Ground</a>
-                <a href="{% url 'products' %}?category=coffee_accessories" class="dropdown-item">Accessoriess</a>
+                <a href="{% url 'products' %}?category=coffee_beans,coffee_pre_ground" class="dropdown-item">Coffee Beans &amp; Pre-Ground</a>
+                <a href="{% url 'products' %}?category=coffee_accessories" class="dropdown-item">Coffee Accessoriess</a>
                 <a href="{% url 'products' %}?category=coffee_beans,coffee_pre_ground,coffee_accessories" class="dropdown-item">All Coffee</a>
             </div>
         </li>
