Added sorting JS and back to top button to product page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -156,6 +156,17 @@ hr {
     border-color: #FAB49A;
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
 
 /* -------------------------------- Media Queries */
 
