added shopping bag app url's and template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,6 +38,10 @@ body {
     color: #FAB49A;
 }
 
+.btn-outline-black {
+    color: #FAB49A !important;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
