--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -65,7 +65,7 @@ All Products
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-add-bag rounded-pill text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-peach rounded-pill text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
