--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -59,9 +59,9 @@ Home
                         {% endfor %}
                         <tr>
                             <td colspan="5" class="pt-5 text-right text-peach">
-                                <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                                <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                                <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                <h6><strong>Bag Total: </strong><strong class="text-white">${{ total|floatformat:2 }}</strong></h6>
+                                <h6>Delivery: <span class="text-white">${{ delivery|floatformat:2 }}</span></h6>
+                                <h4 class="mt-4"><strong>Grand Total: </strong><strong class="text-white">${{ grand_total|floatformat:2 }}</strong></h4>
                                 {% if free_delivery_delta > 0 %}
                                     <p class="mb-1 text-danger">
                                         You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
@@ -71,13 +71,13 @@ Home
                         </tr>
                         <tr>
                             <td colspan="5" class="text-right">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill btn-lg">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill btn-lg mb-2">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <a href="" class="btn btn-peach rounded-pill btn-lg text-uppercase">
+                                <a href="" class="btn btn-peach rounded-pill btn-lg text-uppercase mb-2">
                                     <span class="text-uppercase">Secure Checkout</span>
                                     <span class="icon">
                                         <i class="fas fa-lock"></i>
