--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,7 +20,7 @@ All Products
                 <h2 class="logo-font text-peach">Products</h2>
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-peach rounded-pill border border-peach">{{ c.friendly_name }}</span>
+                        <span class="p-2 mt-2 badge text-peach rounded-pill border-peach">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
                 <hr class="w-50 mb-1">
@@ -72,7 +72,7 @@ All Products
                                 <div class="card-footer bg-custom pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold text-peach">${{ product.price }}</p>
+                                            <p class="lead mb-0 text-left font-weight-bold text-white">${{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -81,9 +81,9 @@ All Products
                                             </p>
                                             {% endif %}
                                             {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1 text-peach"></i>{{ product.rating }} / 5</small>
+                                                <small class="text-white"><i class="fas fa-star mr-1 text-peach"></i>{{ product.rating }} / 5</small>
                                             {% else %}
-                                                <small class="text-muted">No Rating</small>
+                                                <small class="text-white">No Rating</small>
                                             {% endif %}
                                         </div>
                                     </div>
