--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -40,7 +40,7 @@ Home
                         {% for item in bag_items %}
                             <tr>
                                 <td class="p-3 w-25">
-                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                                    <img class="img-fluid rounded" width="150" height="150" src="{{ item.product.image.url }}">
                                 </td>
                                 <td class="py-3">
                                     <p class="my-0 text-peach"><strong>{{ item.product.name }}</strong></p>
