--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -40,11 +40,6 @@ All Products
                         </a>
                     </p>
                     {% endif %}
-                    {% if product.rating %}
-                        <small class="text-white"><i class="fas fa-star mr-1 text-peach"></i>{{ product.rating }} / 5</small>
-                    {% else %}
-                        <small class="text-white">No Rating</small>
-                    {% endif %}
                     <p class="mt-3">{{ product.description|safe }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
@@ -54,10 +49,10 @@ All Products
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                            <button class="decrement-qty btn btn-peach rounded-0" 
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
-                                                    <i class="fas fa-minus"></i>
+                                                    <i class="fas fa-minus text-black"></i>
                                                 </span>
                                             </button>
                                         </div>
@@ -66,10 +61,10 @@ All Products
                                             data-item_id="{{ product.id }}" 
                                             id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
+                                            <button class="increment-qty btn btn-peach rounded-0"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
-                                                    <i class="fas fa-plus"></i>
+                                                    <i class="fas fa-plus text-black"></i>
                                                 </span>
                                             </button>
                                         </div>
