--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,11 @@
     </header>
 
     {% if messages %}
-    <div class="class message-container"></div>
+    <div class="class message-container">
+        {% for message in messages %}
+            {% include 'includes/toasts/toast_success.html' %}
+        {% endfor %}
+    </div>
     {% endif %}
 
     {% block page_header %}
