Added notification CSS, Shopping bag preview and additional messages

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,7 +23,7 @@ All Products
                         <span class="p-2 mt-2 badge text-peach rounded-pill border-peach">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
-                <hr class="w-50 mb-1">
+                <hr class="hr-peach w-50 mb-1">
             </div>
         </div>
         <div class="row">
@@ -87,22 +87,22 @@ All Products
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
                             <div class="col-12 d-sm-none mb-5">
-                                <hr>
+                                <hr class="hr-peach">
                             </div>
                         {% endif %}                        
                         {% if forloop.counter|divisibleby:2 %}
                             <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                                <hr>
+                                <hr class="hr-peach">
                             </div>
                         {% endif %}
                         {% if forloop.counter|divisibleby:3 %}
                             <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                                <hr>
+                                <hr class="hr-peach">
                             </div>
                         {% endif %}
                         {% if forloop.counter|divisibleby:4 %}
                             <div class="col-12 d-none d-xl-block mb-5">
-                                <hr>
+                                <hr class="hr-peach">
                             </div>
                         {% endif %}
                     {% endfor %}
