--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -18,9 +18,9 @@ Home
 <div class="container mb-2">
     <div class="row">
         <div class="col">
-            <hr>
+            <hr class="hr-peach">
             <h2 class="logo-font text-peach mb-4">Shopping Bag</h2>
-            <hr>
+            <hr class="hr-peach">
         </div>
     </div>
 
