added checkout views and templates

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -107,7 +107,7 @@ Home
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <a href="" class="btn btn-peach rounded-pill btn-lg text-uppercase mb-2">
+                                <a href="{% url 'checkout' %}" class="btn btn-peach rounded-pill btn-lg text-uppercase mb-2">
                                     <span class="text-uppercase">Secure Checkout</span>
                                     <span class="icon">
                                         <i class="fas fa-lock"></i>
