--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -30,7 +30,7 @@ Checkout Success
 
         <div class="row">
             <div class="col-12 col-lg-7">
-                <div class="order-confirmation-wrapper p-2 border">
+                <div class="order-confirmation-wrapper p-2 border border-secondary">
                     <div class="row">
                         <div class="col">
                             <small class="text-white">Order Info:</small>
@@ -194,7 +194,7 @@ Checkout Success
         </div>
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
-				<a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-outline-black rounded-pill my-2">
+				<a href="{% url 'products' %}" class="btn btn-outline-black rounded-pill my-2">
 					<span class="icon mr-2">
 						<i class="fas fa-gifts"></i>
 					</span>
