--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -30,7 +30,7 @@ Checkout Success
 
         <div class="row">
             <div class="col-12 col-lg-7">
-                <div class="order-confirmation-wrapper p-2 border border-secondary">
+                <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
                             <small class="text-white">Order Info:</small>
