--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -22,7 +22,7 @@
 }
 
 .stripe-style-input::placeholder {
-    color: #aab7c4;
+    color: #aab7c4 !important;
 }
 
 .fieldset-label {
@@ -34,6 +34,16 @@
 #card-element {
     color: #3C3C3C !important;
     border: 1px solid #FAB49A !important;
+}
+
+select,
+select option {
+    color: #3C3C3C;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
 }
 
 #loading-overlay {
