--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,5 +1,9 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Password Reset
+{% endblock %}
+
 {% load i18n %}
 {% load account %}
 
@@ -7,9 +11,9 @@
 
 {% block inner_content %}
 
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
+    <hr class="hr-peach">
+    <h2 class="logo-font mb-4 text-peach">{% trans "Password Reset" %}</h2>
+    <hr class="hr-peach">
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -19,7 +23,7 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn btn-outline-black rounded-pill" href="{% url 'account_login' %}">Back to Login</a>
         <input type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
