--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,13 +1,17 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Set Password
+{% endblock %}
+
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
-    <hr>
+    <hr class="hr-peach">
+    <h2 class="logo-font mb-4 text-peach">{% trans "Set Password" %}</h2>
+    <hr class="hr-peach">
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
