--- a/static/css/base.css
+++ b/static/css/base.css
@@ -168,6 +168,7 @@ a.category-badge > span.badge:hover {
     background-color: #3C3C3C;
     color: #3C3C3C;
 }
+
 .input-group-append {
     right: 0;
     z-index: 9999;
@@ -277,20 +278,28 @@ a.category-badge > span.badge:hover {
 
 .allauth-form-inner-content p {
     margin-top: 1.5rem; /* mt-4 */
-    color: #6c757d; /* text-secondary */
+    color: white; /* text-secondary */
+}
+
+.allauth-form-inner-content a {
+    color: #FAB49A; /* text-secondary */
 }
 
 .allauth-form-inner-content input {
     border-color: #FAB49A;
-    border-radius: 0;
+    border-radius: 50rem;
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
     display: none;
 }
 
+.allauth-form-inner-content label {
+    color: white;
+}
+
 .allauth-form-inner-content input::placeholder {
-    color: #aab7c4;
+    color: #3C3C3C;
 }
 
 .allauth-form-inner-content button,
@@ -298,7 +307,7 @@ a.category-badge > span.badge:hover {
 	/* btn */
 	display: inline-block;
     font-weight: 400;
-    color: #fff;
+    color: #3C3C3C;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -310,7 +319,7 @@ a.category-badge > span.badge:hover {
     padding: .375rem .75rem;
     font-size: 1rem;
     line-height: 1.5;
-    border-radius: 0;
+    border-radius: 50rem;
 
     /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -324,7 +333,7 @@ a.category-badge > span.badge:hover {
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+	color: #FAB49A; /* text-info */
 }
 
 /* -------------------------------- Media Queries */
