--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,13 +1,17 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Account Inactive
+{% endblock %}
+
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
-<hr>
+<hr class="hr-peach">
+<h2 class="logo-font mb-4 text-peach">{% trans "Account Inactive" %}</h2>
+<hr class="hr-peach">
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
