--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -1,5 +1,9 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Confirm E-mail
+{% endblock %}
+
 {% load i18n %}
 {% load account %}
 
@@ -7,9 +11,9 @@
 
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
-<hr>
+<hr class="hr-peach">
+<h2 class="logo-font mb-4 text-peach">{% trans "Confirm E-mail Address" %}</h2>
+<hr class="hr-peach">
 
 {% if confirmation %}
 
