--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,5 +1,9 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Sign In
+{% endblock %}
+
 {% load i18n %}
 {% load account socialaccount %}
 
@@ -7,9 +11,9 @@
 
 {% block inner_content %}
 
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
-<hr>
+<hr class="hr-peach">
+<h2 class="logo-font mb-4 text-peach">{% trans "Sign In" %}</h2>
+<hr class="hr-peach">
 
 {% get_providers as socialaccount_providers %}
 
@@ -41,7 +45,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Home</a>
+  <a class="btn btn-outline-black rounded-pill" href="{% url 'home' %}">Home</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
   <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
