--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,18 +1,22 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Change Password
+{% endblock %}
+
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+    <hr class="hr-peach">
+    <h2 class="logo-font mb-4 text-peach">{% trans "Change Password" %}</h2>
+    <hr class="hr-peach">
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn btn-outline-black rounded-pill" href="{% url 'account_login' %}">Back to Login</a>
         <button type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
