--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -1,14 +1,18 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Password Reset
+{% endblock %}
+
 {% load i18n %}
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
+    <hr class="hr-peach">
+    <h2 class="logo-font mb-4 text-peach">{% trans "Password Reset" %}</h2>
+    <hr class="hr-peach">
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
