--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,12 +1,16 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Change Password
+{% endblock %}
+
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
-    <hr>
+    <hr class="hr-peach">
+    <h2 class="logo-font mb-4 text-peach">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    <hr class="hr-peach">
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
@@ -16,7 +20,7 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+                <a class="btn btn-outline-black rounded-pill" href="{% url 'account_login' %}">Back to Login</a>
                 <input type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
