--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,11 +1,15 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Change Password
+{% endblock %}
+
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+    <hr class="hr-peach">
+    <h2 class="logo-font mb-4 text-peach">{% trans "Change Password" %}</h2>
+    <hr class="hr-peach">
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
