--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -1,13 +1,17 @@
 {% extends "account/base.html" %}
 
+{% block extra_title %}
+Sign Up Closed
+{% endblock %}
+
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h2>
-<hr>
+<hr class="hr-peach">
+<h2 class="logo-font mb-4 text-peach">{% trans "Sign Up Closed" %}</h2>
+<hr class="hr-peach">
 
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
