product admin finished add product functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -45,11 +45,11 @@ All Products
                         </div>
                     </div>
                     <div class="col-12 col-md-6 order-md-first">
-                        <p class="text-muted mt-3 text-center text-md-left">
+                        <p class="text-white mt-3 text-center text-md-left">
                             {% if search_term or current_categories or current_sorting != 'None_None' %}
                                 <span class="small text-peach-nav"><a class="text-peach-nav" href="{% url 'products' %}">Products Home</a> | </span>
                             {% endif %}
-                            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                            {{ products|length }} Products{% if search_term %} found for <strong class="text-peach">"{{ search_term }}"</strong>{% endif %}
                         </p>
                     </div>
                 </div>
