Products added dog toys dog treats coffee beans

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -19,7 +19,7 @@ Edit Product
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr class="hr-peach">
-                <h2 class="logo-font mb-4 text-peach">Product Management</h2>
+                <h2 class="logo-font mb-4 text-peach text-center">Product Management</h2>
                 <h5 class="text-muted text-peach">Edit a Product</h5>
                 <hr class="hr-peach">
             </div>
