--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,7 +23,7 @@ Profile
         <div class="row">
             <div class="col">
                 <hr class="hr-peach">
-                <h2 class="logo-font mb-4 text-peach">My Profile</h2>
+                <h2 class="logo-font mb-4 text-peach text-center">My Profile</h2>
                 <hr class="hr-peach">
             </div>
         </div>
