--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -32,16 +32,16 @@ All Products
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5 text-peach">
                     <p class="mb-0"><h3>{{ product.name }}</h3></p>
-                    <p class="lead mb-0 text-left font-weight-bold text-peach">${{ product.price }}</p>
+                    <p class="lead mb-0 text-left text-white">${{ product.price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                        <a class="text-white small" href="{% url 'products' %}?category={{ product.category.name }}">
                             <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                         </a>
                     </p>
                     {% endif %}
                     {% if request.user.is_superuser %}
-                        <small class="ml-3 text-muted">
+                        <small class="ml-3 text-white small">
                             <a href="{% url 'edit_product' product.id %}">Edit</a> | 
                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                         </small>
