--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -75,7 +75,7 @@ All Products
                                             <p class="lead mb-0 text-left font-weight-bold text-white">${{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
-                                                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                                                <a class="text-white small" href="{% url 'products' %}?category={{ product.category.name }}">
                                                     <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                                                 </a>
                                             </p>
