--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,5 +32,11 @@
                 <a href="{% url 'products' %}?category=coffee_beans,coffee_pre_ground,coffee_accessories" class="dropdown-item">All Coffee</a>
             </div>
         </li>
+
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-peach-nav mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact Us
+            </a>
+        </li>
     </ul>
 </div>
