--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -2,24 +2,49 @@
 {% load static %}
 
 {% block extra_title %}
-Profile
+Contact
+{% endblock %}
+
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
+    <div class="overlay"></div>
+    <div class="container contact-form-container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8">
                 <hr class="hr-peach">
-                <h2 class="logo-font mb-4 text-peach text-center">My Profile</h2>
+                <h2 class="logo-font mb-4 text-peach text-center">Contact Us</h2>
                 <hr class="hr-peach">
             </div>
         </div>
+
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8">
+                <form method="POST" action="{% url 'add_product' %}" class="form mb-2 text-white">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        {{ form.name }}
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        {{ form.email }}
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="message-label">Your Message</label>
+                        {{ form.message }}
+                    </div>
+                    <div>
+                        <button class="btn btn-peach rounded-pill" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>            
+        </div>
     </div>
-</div>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
 {% endblock %}
