--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -20,11 +20,11 @@ All Products
                 <div class="image-container my-5">
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="max-width: 380px">
                         </a>
                         {% else %}
                         <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}" style="max-width: 380px">
                         </a>
                     {% endif %}
                 </div>
@@ -68,7 +68,7 @@ All Products
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-peach rounded-0" 
+                                            <button class="decrement-qty btn btn-peach rounded-0" aria-label="decrement quantity"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus text-black"></i>
@@ -78,9 +78,9 @@ All Products
                                         <input class="form-control qty_input" type="number"
                                             name="quantity" value="1" min="1" max="99" 
                                             data-item_id="{{ product.id }}" 
-                                            id="id_qty_{{ product.id }}">
+                                            id="id_qty_{{ product.id }}" aria-label="quantity amount">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-peach rounded-0"
+                                            <button class="increment-qty btn btn-peach rounded-0" aria-label="increment quantity"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus text-black"></i>
