--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Woof and Bean Cafe Website">
     {% endblock %}
 
     {% block extra_meta %}
@@ -41,7 +42,7 @@
         <div id="topnav" class="row bg-custom pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link logo-link">
-                    <img src="/media/wblogo.png" width="40" height="40" class="d-inline-block align-top" alt="">
+                    <img src="/media/wblogo.png" width="44" height="40" class="d-inline-block align-top" alt="">
                     <span class="logo-font text-logo my-0"><strong>Woof</strong> & <strong>Bean</strong></span>
                 </a>
             </div>
@@ -50,7 +51,7 @@
                     <div class="input-group w-100 position-relative">
                         <input class="form-control search-bar rounded-pill pr-5" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append position-absolute">
-                            <button class="form-control btn btn-search rounded-pill" type="submit">
+                            <button class="form-control btn btn-search rounded-pill" aria-label="search-button" type="submit">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
